2002-04-09  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-bitmap.el: Convert CRLF to LF.
	(w3m-display-graphic-p): Ruturn nil if no window-system.
	(w3m-image-type-available-p): Ruturn nil if not found "convert".

	* w3mhack.el (w3mhack-examine-modules): Don't byte-compile
	w3m-bitmap.el under XEmacs or FSF Emacs-21.

	* w3m.el (w3m-fontify): When delete duplicated empty line, keep
	'w3m-name-anchor property surely.

	* w3m-e20.el (top): Require 'w3m-bitmap if have BITMAP.

2002-04-09  Taiki SUGAWARA  <taiki.s@cityfujisawa.ne.jp>

	* w3mhack.el (w3mhack-examine-modules): Don't byte-compile
	w3m-bitmap.el if bitmap.el is not installed.
	(w3mhack-examine-modules): Add condition to w3m-bitmap.el check.

	* w3m-bitmap.el: New file.
	
	* w3m-e20.el (w3m-create-image, w3m-insert-image,
	w3m-remove-image, w3m-image-type-available-p,
	w3m-display-graphic-p, w3m-display-inline-images-p): Alias to
	`ignore'. Bitmap image implementation is moved to w3m-bitmap.el.
	(w3m-bitmap-image-cache-alist, w3m-bitmap-image-use-cache,
	w3m-bitmap-image-cleanup, w3m-bitmap-image-buffer,
	w3m-bitmap-image-get-overlay, w3m-bitmap-image-insert-internal,
	w3m-bitmap-image-insert, w3m-bitmap-image-insert-string,
	w3m-bitmap-image-delete-internal, w3m-bitmap-image-delete,
	w3m-bitmap-image-delete-string,
	w3m-bitmap-image-add-text-properties): Move to w3m-bitmap.el.

2002-04-09  Taiki SUGAWARA  <taiki.s@cityfujisawa.ne.jp>

	* w3m-e20.el (w3m-create-image): Return nil if
	w3m-imagick-convert-buffer is failed.
	(w3m-insert-image): Not insert image if image is nil.

2002-04-08  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-coding-system): Change default value to
	'iso-2022-7bit-ss2 when use w3mmee under mule environment.

2002-04-08  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-xmas.el (w3m-create-image): Resize gif images, too.

2002-04-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-make-glyph): Remove unused var.

2002-04-08  Yuuichi Teranishi  <teranisi@gohome.org>
